Deep rewrite of Reflection, I/O, and Crypto topics (batch 6)
by-topic/language/reflection/index.md (675 → 1158 lines):
- API evolution: JDK 1.1 → MethodHandle → VarHandle → JEP 416
- MethodHandle: Lookup, find*, invokeExact vs invoke, combinators
- VarHandle: memory ordering semantics, CAS, Unsafe migration
- Module impact: setAccessible, --add-opens, JEP 396/403
- JEP 416 (JDK 18): MethodHandle-based reflection reimpl
- Dynamic Proxy: JDK Proxy vs CGLIB vs ByteBuddy comparison

by-topic/api/io/index.md (483 → 945 lines):
- I/O evolution: java.io → NIO → NIO.2 → Virtual Thread I/O
- NIO Channel: FileChannel, SocketChannel, Selector diagram
- Buffer: position/limit/capacity, flip/compact, direct vs heap
- Memory-mapped files: MappedByteBuffer vs MemorySegment
- Path/Files API (NIO.2): walk, find, atomic operations
- Virtual threads + I/O: auto-unmount, pinning compatibility

by-topic/crypto/index.md (519 → 823 lines):
- JCA/JCE: Provider model, 11 Engine Classes
- Symmetric: AES-GCM/CBC, ChaCha20-Poly1305 (JEP 329)
- Asymmetric: RSA-OAEP, ECDSA/ECDH, EdDSA (JEP 339)
- PQC: ML-KEM (JEP 496), ML-DSA (JEP 497), migration
- Key management: KDF API (JEP 510), PEM API (JEP 470)
- 6 security pitfalls with wrong/right code examples

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>